# 2023-Spring-I2PII-Mini_Project_2

./: CMakeLists.txt  README.md  main.cpp
Base.lproj/: Main.storyboard.xml
include/: DiceEnemy.hpp  DiceTwoEnemy.hpp  FireBullet.hpp  Group.hpp  IScene.hpp  Image.hpp  ImageButton.hpp  Label.hpp  LoseScene.hpp  PlayScene.hpp  RedNormalEnemy.hpp  Resources.hpp  SettingScene.hpp  Shifter.hpp  Shovel.hpp  Slider.hpp  Sprite.hpp  StageSelectScene.hpp  StartScene.hpp  ToolsButton.hpp  TurretButton.hpp  WinScene.hpp  WoodBullet.hpp
include/Bullet/: Bullet.hpp  FireBullet.hpp  OrbitBullet.hpp  WoodBullet.hpp
include/Effect/: DirtyEffect.hpp  ExplosionEffect.hpp  ShootEffect.hpp
include/Enemy/: DiceEnemy.hpp  DiceFiveEnemy.hpp  DiceFourEnemy.hpp  DiceSixEnemy.hpp  DiceThreeEnemy.hpp  DiceTwoEnemy.hpp  Enemy.hpp
include/Scene/: LoseScene.hpp  PlayScene.hpp  SettingScene.hpp  StageSelectScene.hpp  StartScene.hpp  WinScene.hpp
include/Turret/: DoubleMachineGun.hpp  MachineGun.hpp  OrbitTurret.hpp  Plane.hpp  Turret.hpp  TurretButton.hpp
resources/: enemy1.txt  enemy2.txt  enemy3.txt  map2.txt
src/: Allegro5Exception.cpp  AudioHelper.cpp  Bullet.cpp  Collider.cpp  DiceEnemy.cpp  DiceTwoEnemy.cpp  DirtyEffect.cpp  Enemy.cpp  ExplosionEffect.cpp  FireBullet.cpp  GameEngine.cpp  Group.cpp  IControl.cpp  IObject.cpp  IScene.cpp  Image.cpp  ImageButton.cpp  LOG.cpp  Label.cpp  LoseScene.cpp  MachineGun.cpp  Plane.cpp  PlayScene.cpp  PlugGunTurret.cpp  Point.cpp  RedNormalEnemy.cpp  Resources.cpp  SettingScene.cpp  Shifter.cpp  ShootEffect.cpp  Shovel.cpp  Slider.cpp  Sprite.cpp  StageSelectScene.cpp  StartScene.cpp  ToolsButton.cpp  Turret.cpp  TurretButton.cpp  WinScene.cpp  WoodBullet.cpp  (+1 more)
src/Bullet/: Bullet.cpp  FireBullet.cpp  OrbitBullet.cpp  WoodBullet.cpp
src/Effect/: DirtyEffect.cpp  ExplosionEffect.cpp  ShootEffect.cpp
src/Enemy/: DiceEnemy.cpp  DiceFiveEnemy.cpp  DiceFourEnemy.cpp  DiceSixEnemy.cpp  DiceThreeEnemy.cpp  DiceTwoEnemy.cpp  Enemy.cpp  RedNormalEnemy.cpp
src/Scene/: IScene.cpp  LoseScene.cpp  PlayScene.cpp  SettingScene.cpp  StageSelectScene.cpp  StartScene.cpp  WinScene.cpp
src/Turret/: DoubleMachineGun.cpp  MachineGun.cpp  OrbitTurret.cpp  Plane.cpp  PlugGunTurret.cpp  Turret.cpp  TurretButton.cpp
